--- a/P000474.opf/meta.yml
+++ b/P000474.opf/meta.yml
@@ -3,5 +3,17 @@ initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG5760
   title: དེབ་ཐེར་དམར་པོ་
-  volume: ''
+  volume:
+    f1854d6c23504a8d90551474f10d6777:
+      image_group_id: I1KG5766
+      title: Volume 1 of deb ther dmar po
+      volume_number: 1
+      total_pages: 502
   author: ''
+ebook_metadata:
+  title: དེབ་ཐེར་དམར་པོ་
+  author: ''
+  sku: P000474
+  cover: cover.jpg
+  layers:
+  - pagination
