--- a/P000474.opf/layers/v001/Pagination.yml
+++ b/P000474.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: b73c4c5ceacb46c9ad0f9b81e703a15d
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   452161ac134347b7bb0b9abc6becef7d:
