--- a/P000474.opf/meta.yml
+++ b/P000474.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P000474
 initial_creation_type: ocr
+created_at: 22/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W1KG5760
   title: དེབ་ཐེར་དམར་པོ་
@@ -11,10 +13,3 @@ source_metadata:
       volume_number: 1
       total_pages: 502
       base_file: v001.txt
-ebook_metadata:
-  title: དེབ་ཐེར་དམར་པོ་
-  author: ''
-  sku: P000474
-  cover: cover.jpg
-  layers:
-  - pagination
